--- a/app/package.json
+++ b/app/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "@anyswap/client",
+  "name": "anyswap",
   "version": "0.1.0",
   "description": "TypeScript client library for AnySwap protocol",
-  "main": "dist/index.js",
+  "main": "lib/index.ts",
   "module": "lib/index.ts",
-  "types": "dist/index.d.ts",
+  "types": "lib/index.ts",
   "exports": {
     ".": {
       "import": "./lib/index.ts",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./lib/index.ts",
+      "types": "./lib/index.ts"
     }
   },
   "files": [
     "dist",
-    "src",
+    "lib",
     "README.md"
   ],
   "scripts": {
